# mcp-tool

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test.py
app/: main.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/proto/a2a/: docs.md
app/proto/mcp/: docs.md
app/servers/mcp/sse/: base.py  social.py
app/servers/mcp/std/: base.py
app/servers/mcp/tools/: github.py  social.py
app/utils/cmd/: npx.py
app/utils/helpers/: token.py
app/utils/models/: base.py  gemini.py  openai.py
note/: env.txt  run.txt
